# NeuralNetwork

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  main.cpp  neural_network.h
cmake/: mylib-config.cmake.in  utils.cmake
examples/mnist/: CMakeLists.txt  main.cpp
examples/mnist/saved_models/: 1
examples/mnist/src/: mnist_parser.cpp  mnist_parser.h
include/NeuralNetwork/: neural_network.cpp  neural_network.h
report/: template.aux  template.blg  template.fdb_latexmk  template.fls  template.out  template.tex  template.toc
src/: activations_functions.cpp  activations_functions.h  definitions.h  layer.cpp  layer.h  lose_functions.h  loss_functions.cpp  loss_functions.h  random.cpp  random.h
tests/: CMakeLists.txt  layer_test.cpp
